--- a/SpringBoot-shardingsphere-DepotsTable-rw/src/main/resources/application.properties
+++ b/SpringBoot-shardingsphere-DepotsTable-rw/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 #指定mybatis信息
 mybatis.config-location=classpath:mybatis-config.xml
 
-spring.shardingsphere.datasource.names=ds0,ds1
+spring.shardingsphere.datasource.names=ds0,database0,ds1,database1
 
 # 数据源 主库
 spring.shardingsphere.datasource.ds0.type=com.alibaba.druid.pool.DruidDataSource
@@ -12,11 +12,24 @@ spring.shardingsphere.datasource.ds0.url=jdbc:mysql://121.36.64.197:3306/ds0?use
 spring.shardingsphere.datasource.ds0.username=root
 spring.shardingsphere.datasource.ds0.password=Wrhkw555
 
+
 spring.shardingsphere.datasource.ds1.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.ds1.driver-class-name=com.mysql.jdbc.Driver
 spring.shardingsphere.datasource.ds1.url=jdbc:mysql://121.36.64.197:3306/ds1?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 spring.shardingsphere.datasource.ds1.username=root
 spring.shardingsphere.datasource.ds1.password=Wrhkw555
+
+spring.shardingsphere.datasource.database0.type=com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.database0.driver-class-name=com.mysql.jdbc.Driver
+spring.shardingsphere.datasource.database0.url=jdbc:mysql://121.36.64.197:3306/database0?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.shardingsphere.datasource.database0.username=root
+spring.shardingsphere.datasource.database0.password=Wrhkw555
+
+spring.shardingsphere.datasource.database1.type=com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.database1.driver-class-name=com.mysql.jdbc.Driver
+spring.shardingsphere.datasource.database1.url=jdbc:mysql://121.36.64.197:3306/database1?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.shardingsphere.datasource.database1.username=root
+spring.shardingsphere.datasource.database1.password=Wrhkw555
 
 # 水平拆分的数据库（表） 配置分库 + 分表策略 行表达式分片策略
 
@@ -25,11 +38,22 @@ spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=
 spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds$->{age % 2}
 
 # 分表策略 其中user为逻辑表 分表主要取决于age行
-spring.shardingsphere.sharding.tables.tab_user.actual-data-nodes=ds$->{0..1}.tab_user$->{0..1}
+spring.shardingsphere.sharding.tables.tab_user.actual-data-nodes=ds$->{0..1}.tab_user$->{0..2}
 spring.shardingsphere.sharding.tables.tab_user.table-strategy.inline.sharding-column=id
 
 # 分片算法表达式
 spring.shardingsphere.sharding.tables.tab_user.table-strategy.inline.algorithm-expression=tab_user$->{id % 3}
+
+spring.shardingsphere.masterslave.load-balance-algorithm-type=round_robin
+spring.shardingsphere.masterslave.name=ms
+
+spring.shardingsphere.sharding.master-slave-rules.ds0.master-data-source-name=ds0
+spring.shardingsphere.sharding.master-slave-rules.ds0.slave-data-source-names=database0
+
+
+spring.shardingsphere.sharding.master-slave-rules.ds1.master-data-source-name=ds1
+spring.shardingsphere.sharding.master-slave-rules.ds1.slave-data-source-names=database1
+
 #打印sql
 spring.shardingsphere.props.sql.show=true
 spring.main.allow-bean-definition-overriding=true
