规范项目,上传redis缓存

--- a/SpringBoot-shardingsphere-submeter/src/main/resources/application.properties
+++ b/SpringBoot-shardingsphere-submeter/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.shardingsphere.datasource.ds0.url=jdbc:mysql://121.36.64.197:3306/ds0?use
 spring.shardingsphere.datasource.ds0.username=root
 spring.shardingsphere.datasource.ds0.password=Wrhkw555
 
+spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=age
+spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds$->{age % 2}
+
 #数据分表规则
 #指定所需分的表
 spring.shardingsphere.sharding.tables.tab_user.actual-data-nodes=ds0.tab_user$->{0..2}
