--- a/SpringBoot-Redis/pom.xml
+++ b/SpringBoot-Redis/pom.xml
@@ -9,16 +9,15 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.my</groupId>
-	<artifactId>SpringBoot-shardingsphere-submeter</artifactId>
+	<artifactId>SpringBoot-Redis</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringBoot-shardingsphere-submeter</name>
+	<name>SpringBoot-Redis</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>		
-        <druid>1.1.16</druid>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>		
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		 <druid>1.1.16</druid>
 	</properties>
 
 	<dependencies>
@@ -26,7 +25,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
+		
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.1.3</version>
@@ -42,23 +52,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>${druid}</version>
-        </dependency>
-        <!--shardingsphere最新版本-->
-        <dependency>
-            <groupId>org.apache.shardingsphere</groupId>
-            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
-            <version>4.0.0-RC1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.shardingsphere</groupId>
-            <artifactId>sharding-jdbc-spring-namespace</artifactId>
-            <version>4.0.0-RC1</version>
-        </dependency>
-        <!--lombok实体工具-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
         </dependency>
 
 		<dependency>
